# gantry

./: .gitignore  .travis.yml  README.md
catalog/: Cargo.toml  Makefile  README.md
catalog/src/: catalog.rs  lib.rs
client/: Cargo.toml  README.md
client/gantryclient/: Cargo.toml  README.md
client/gantryclient/src/: broker.rs  chunks.rs  lib.rs
client/src/: main.rs
protocol/: Cargo.toml  README.md  build.rs
protocol/src/: catalog.proto  catalog.rs  lib.rs  stream.proto  stream.rs
server/: Cargo.toml  README.md
server/src/: main.rs  middleware.rs
streams/: Cargo.toml  Makefile  README.md
streams/src/: lib.rs
