[package]
name = "gantry"
version = "0.0.1"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
keywords = ["cli", "waSCC", "WebAssembly"]
categories = ["command-line-utilities", "network-programming"]

[workspace]
members = ["gantryclient"]

[dependencies]
gantryclient = { path = "gantryclient" }
protocol = { path = "../protocol" }
quicli = "0.4"
structopt = "0.3.9"
term-table = "1.2.0"
indicatif = "0.14.0"
crossbeam = "0.7.3"
env_logger = "0.7.1"
wascap = "0.4.0"
