[package]
name = "gantry"
version = "0.0.3"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
homepage = "https://wascc.dev"
description = "Gantry (waSCC actor registry) client"
license = "Apache-2.0"
documentation = "https://docs.rs/wascc-host"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasi", "wascc", "gantry"]
categories = ["wasm", "api-bindings","command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = ["gantryclient"]

[dependencies]
gantryclient = { path = "gantryclient" }
gantry-protocol = "0.0.3"
quicli = "0.4"
structopt = "0.3.11"
term-table = "1.2.0"
indicatif = "0.14.0"
crossbeam = "0.7.3"
env_logger = "0.7.1"
wascap = "0.4.4"
text_io = "0.1.8"
serde_yaml = "0.8.11"
dirs = "2.0.2"