[package]
name = "gantry-protocol"
version = "0.0.3"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
description = "Protocol buffer primitives for the Gantry protocol"
license = "Apache-2.0"
documentation = "https://docs.rs/gantry-protocol"
readme = "README.md"
keywords = ["webassembly", "wasm", "codec", "gantry"]
categories = ["wasm", "data-structures","encoding"]
homepage = "https://wascc.dev"


[dependencies]
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
rmp-serde = "0.14.3"

