[package]
name = "gantry-server"
version = "0.0.2"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gantry-protocol = "0.0.1"
#wascc-host = "0.2.1"
wascc-host = { path ="../../wascc-host"}
wascc-codec = "0.4.2"
prost = "0.6.1"
wascap = "0.4.0"
serde_json = "1.0.48"
nkeys = "0.0.8"
serde = "1.0.104"
log = "0.4.8"
env_logger = "0.7.1"
quicli = "0.4"
structopt = "0.3.9"