[package]
name = "gantry-server"
version = "0.0.3"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gantry-protocol = "0.0.1"
gantry-protocol = { path = "../protocol" }
wascc-host = "0.5.2"
wascc-codec = "0.5.0"
prost = "0.6.1"
wascap = "0.4.4"
serde_json = "1.0.48"
nkeys = "0.0.9"
serde = "1.0.105"
log = "0.4.8"
env_logger = "0.7.1"
quicli = "0.4"
structopt = "0.3.12"