[package]
name = "streams"
version = "0.0.1"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
#wascc-actor = "0.1.2"
wascc-actor = { path = "../../wascc-actor" }
protocol = { path = "../protocol" }
serde_json = "1.0.48"
prost = "0.6.1"

[profile.release]
# Optimize for small code size
opt-level = "s"
