[package]
name = "streams"
version = "0.0.3"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wascc-actor = "0.4.0"
gantry-protocol = "0.0.3"
serde_json = "1.0.48"
prost = "0.6.1"

[profile.release]
# Optimize for small code size
opt-level = "s"
